feature/initial, works for success cases